--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -11,6 +11,8 @@
   --yellow-pastel: rgb(255,255,186);
   --green-pastel: rgb(186,255,201);
   --blue-pastel: rgb(186,225,255);
+
+  --search-bar: var(--light-grey);
 }
 
 body {
@@ -57,18 +59,62 @@ body {
   margin-bottom: 40px;
 }
 
+.search_bar_wrapper {
+  min-width: 126px;
+  width: auto;
+  height: 32px;
+  border-radius: 12px;
+  border: 2px solid var(--grey);
+  background: var(--search-bar);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  transition: width 200ms linear;
+}
+.search_bar_wrapper button {
+  height: 38px;
+  width: auto;
+  min-width: 32px;
+  border: none;
+  background: none;
+}
+.search_bar_wrapper input[type=search] {
+  background: none;
+  width: 94px;
+  height: 38px;
+  padding: 0px 0px 0px 12px;
+  font-size: 16px;
+  border: none;
+  border-radius: 16px 0px 0px 16px;
+  transition: width 200ms linear;
+  -webkit-appearance: none;
+}
+.search_bar_wrapper input[type=search]:focus {
+  outline: none;
+  width: 174px;
+}
+/* clears the search bar ‘X’ from Internet Explorer */
+input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
+input[type=search]::-ms-reveal { display: none; width : 0; height: 0; }
+/* Clears the search bar 'X' from google chrome*/
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
 #sidebar {
   position: sticky;
   top: 120px;
   width: 300px;
   min-width: 300px;
-  height: calc(100vh - 120px);
+  height: calc(100vh - 100px);
   background: var(--dynamic_background);
   background-size: cover;
   z-index: 1;
   display: block;
   transition: width 200ms linear, background 200ms linear;
   box-shadow: 0 -6px 10px 5px rgb(0 0 0 / 30%);
+  top: 100px;
 }
 #sidebar container {
   width: 100%;
@@ -189,13 +235,13 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  background: rgba(0,0,0,0.1);
+  background: none;
 }
-.table_wrapper header h2 {
-  font-size: 40px;
+.table_wrapper header h3 {
+  font-size: 32px;
   letter-spacing: 4px;
   color: var(--white);
-  margin-left: 8px;
+  margin-left: 16px;
 }
 .table_wrapper header .button_wrapper {
   width: auto;
@@ -485,7 +531,7 @@ spacer {
 .event_card header {
   width: auto;
   height: auto;
-  background: rgba(0,0,0,0.1);
+  background: none;
   border-radius: 16px 16px 0px 0px;
   padding: 8px;
   border-bottom: 4px solid rgb(0,0,0);
@@ -531,6 +577,35 @@ spacer {
   line-height: 26px;
 }
 
+#control_panel {
+  width: 100%;
+  height: auto;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 16px;
+  box-shadow: 0px 3px 15px rgb(0 0 0 / 20%);
+  margin-bottom: 40px;
+  background: var(--white);
+}
+#control_panel header {
+  width: 100%;
+  min-height: 60px;
+  height: auto;
+  border-radius: 16px 16px 0px 0px;
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  grid-template-rows: 60px;
+  grid-auto-flow: column;
+  background: none;
+}
+#control_panel header h2 {
+  font-size: 32px;
+  letter-spacing: 4px;
+  color: var(--black);
+  height: auto;
+  margin: auto 0px auto 8px;
+}
 @media screen and (max-width: 1400px), (max-height: 800px) {
   #main_header {
     min-height: 80px;
@@ -545,10 +620,6 @@ spacer {
   }
   #main_header h1 {
     font-size: 20px;;
-  }
-  #main_header .blue_button {
-    height: 32px;
-    border-radius: 12px;
   }
   navbar {
     padding: 0px 20px 0px 0px;
