--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -181,6 +181,13 @@ navbar .divider {
   font-size: 16px;
   line-height: 16px;
 }
+.text h6 {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+}
 .text p {
   margin: 8px 0px;
   max-width: 840px;
