Tables now display a simple message when they are empty

--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -1030,6 +1030,32 @@ spacer {
   max-height: 240px;
 }
 
+.empty_table_placeholder {
+  width: calc(100% - 32px);
+  height: auto;
+  background: rgba(248, 245, 250, 0.9);
+  display: flex;
+  flex-direction: row;
+  padding: 16px;
+}
+.empty_table_placeholder text {
+  font-size: 32px;
+  font-family: 'Montserrat';
+  font-weight: 580;
+}
+.empty_table_placeholder h3 {
+  width: auto;
+  display: inline-block;
+}
+.empty_table_placeholder h3:first-of-type {
+  margin: 0px auto auto 0px;
+  text-align: left;
+}
+.empty_table_placeholder h3:last-of-type {
+  margin: auto 0px 0px auto;
+  text-align: right;
+}
+
 @media screen and (max-width: 1400px), (max-height: 800px) {
   #main_header {
     min-height: 80px;
