--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -60,7 +60,7 @@ body {
   margin-bottom: 40px;
 }
 
-.search_bar_wrapper {
+.searchbar_wrapper {
   grid-area: 1 / 1 / 2 / 2;
   min-width: 126px;
   width: auto;
@@ -72,16 +72,16 @@ body {
   align-items: center;
   transition: width 100ms linear;
 }
-.search_bar_wrapper button {
+.searchbar_wrapper button {
   height: 38px;
   width: auto;
   min-width: 32px;
   border: none;
   background: none;
 }
-.search_bar_wrapper input[type=search] {
+.searchbar_wrapper input[type=search] {
   background: none;
-  width: 94px;
+  width: 174px;
   height: 38px;
   padding: 0px 0px 0px 12px;
   font-size: 16px;
@@ -90,12 +90,11 @@ body {
   transition: width 100ms ease-in-out;
   -webkit-appearance: none;
 }
-.search_bar_wrapper input[type=search]:focus {
+.searchbar_wrapper input[type=search]:focus {
   outline: none;
-  width: 174px;
 }
 
-.search_bar_container {
+.searchbar_container {
   width: auto;
   height: auto;
   max-width: 206px;
@@ -124,6 +123,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   height: auto;
   width: calc(100% - 24px);
   margin: 0px 9px;
+  display: block;
 }
 #staff_searchbar_suggestions li {
   overflow-x: hidden;
@@ -133,11 +133,15 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   height: auto;
   max-height: 28px;
   cursor: pointer;
+  border-top: 1px solid var(--grey);
+  background: none;
 }
+/*When a suggestion is being hovered over, highlight it with a subtle change in its background color*/
 #staff_searchbar_suggestions li:hover {
   background: rgba(198, 196, 200, 0.9);
 }
-#staff_searchbar_suggestions li:nth-of-type(1n+5) {
+/*Stops there from being more than n-1 suggestions visible at any given time (6 in this case)*/
+#staff_searchbar_suggestions li:nth-of-type(1n+7) {
   display: none;
 }
 
@@ -696,7 +700,7 @@ spacer {
   align-items: center;
   background: none;
 }
-.home_panel header .search_bar_wrapper {
+.home_panel header .searchbar_wrapper {
   margin: auto 16px auto auto;
 }
 .home_panel header h3 {
