--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<style>
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
@@ -155,44 +153,50 @@ navbar .divider {
   font-weight: 400;
   font-size: 64px;
   line-height: 78px;
+  font-family: 'Montserrat';
 }
 .text h2 {
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
   line-height: 49px;
+  font-family: 'Montserrat';
 }
 .text h3 {
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
+  font-family: 'Montserrat';
 }
 .text h4 {
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
+  font-family: 'Montserrat';
 }
 .text h5 {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 20px;
+  font-family: 'Montserrat';
 }
 .text h6 {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
+  font-family: 'Montserrat';
 }
 .text p {
   margin: 8px 0px;
   max-width: 840px;
   font-size: 18px;
+  font-family: 'Montserrat';
 }
 
 .hidden {
   display: none;
 }
-</style>
