Constructed a framework to support popups on the staff page; Optimised the JavaScript code used for all search boxes;

--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -131,6 +131,12 @@ navbar .divider {
   -webkit-transform: rotate(45deg);
 }
 
+.input_field {
+  padding: 0px 8px;
+}
+.capitalize {
+  text-transform: capitalize;
+}
 .text_grid {
   display: grid;
   grid-template-columns: repeat(2, auto);
