--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -37,15 +37,51 @@
 .edit_button {
   background: var(--navy);
 }
+
+.input_wrapper {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 35% 65%;
+  margin: 16px 0px;
+}
+.input_wrapper * {
+  width: 100%;
+  height: 100%;
+}
+.input_wrapper label {
+  grid-area: 1 / 1 / 2 / 2;
+  text-align: left;
+}
+.input_wrapper input {
+  padding: 0px;
+  margin: -2px -2px 0px 0px;
+  border: 2px solid #C6C4C8;
+  border-radius: 4px;
+  font-size: 16px;
+}
+.input_wrapper textarea {
+  padding: 0px;
+  margin: -2px -2px 0px 0px;
+  border: 2px solid #C6C4C8;
+  border-radius: 4px;
+  resize: none;
+  font-size: 16px;
+}
+.input_wrapper input[type="time"] {
+  width: 40%;
+}
+.input_wrapper input[type="number"] {
+  width: 15%;
+}
+
 .input_area form {
   width: auto;
   max-width: 1000px;
 }
 .input_area .input_wrapper {
   grid-template-columns: 30% 40% 30%;
-}
-.capitalize {
-  text-transform: capitalize;
 }
 .input_area .submit_wrapper {
   width: 100%;
