--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -6,6 +6,7 @@
   --white: #F8F5FA;
   --black: #000000;
   --navy: #0A2240;
+  --light-navy: #13345C;
   --grey: #6E7C8E;
   --light-grey: #D9D9D9;
 
@@ -201,6 +202,32 @@ navbar .divider {
   max-width: 840px;
   font-size: 18px;
   font-family: 'Montserrat';
+}
+
+button.loading::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+@keyframes button-loading-spinner {
+  from { transform: rotate(0turn); }
+  to { transform: rotate(1turn); }
+}
+button.loading-complete {
+  background: var(--green);
+}
+button.loading-complete:after {
+  content: '<i class="fa fa-check"></i>';
 }
 
 .hidden {
